Replace synchronized Stack with Deque in feed and query path.